responsive project practice

--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 <body>
     <!-- header section start -->
     <header>
-
+        <div class="nav-container">
+            <div>
+                <img src="images/icons/logo.png" alt="">
+            </div>
+            <div>
+                <ul class="nav-item">
+                    <li><h3>Home</h3></li>
+                    <li><h3>About</h3></li>
+                    <li><h3>Works</h3></li>
+                    <li><img src="images/icons/profile.png" alt=""></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <!-- header section end -->
 
